# gpu-kernels

./: .gitignore  CMakeLists.txt  hello_world.cu  idx.cu  nvml_example.cu  utility.cu
build_support/: run_clang_format.py
examples/: block_launch_order.cu  simpleTensorCoreGEMM.cu  thread_coarsening.cu  vec_load.cu
examples/A100_gemm/: call_cublas.cu  perf_cublas.py
examples/cublasLt/: LtFp8Matmul.cu  LtSgemmSimpleAutoTuning.cu  helpers.h
examples/gemm/: anotherGEMM.cu  basic.cu  simpleTensorCoreGEMM.cu
examples/loop-pipelining/: main.cu  memcpy_async.cu  memcpy_async_pipeline.cu  native.cu
examples/ptx/ptxjit/: Makefile
examples/ptx/simple/: output.ptx  output.sass  ref.ptx
examples/sass/: vector-add  vector-add.cu  vector-add.sass
examples/share_mem/: example1.cu
examples/test/: build.txt  cuobjdump_dump  dryrun.sh  kernel  kernel.cpp1.ii  kernel.cpp4.ii  kernel.cu  kernel.cudafe1.c  kernel.cudafe1.cpp  kernel.cudafe1.gpu  kernel.cudafe1.stub.c  kernel.fatbin  kernel.fatbin.c  kernel.module_id  kernel.ptx  kernel.sm_80.cuasm  kernel.sm_80.cubin  kernel_dlink.fatbin  kernel_dlink.fatbin.c  kernel_dlink.sm_80.cubin  nvdisasm_dump
examples/transpose/: basic.cu
microbenchmark/: 1.cu  1.ptx  cp_async.cu  dep.cuasm  hack.cuasm  int4.cu  int4.cuasm  int4_add.cu  int4_wrapper.cu  ptx_wrapper.cu  wmma.cu  wmma.cuasm
